2010-01-05  Werner Koch  <wk@g10code.com>

	* m4/gpg4win.m4: Quote variables in test comamnds instead of using
	instead of comparing against xno or xyes.

	* packages/packages.current: Update gpgex and gpgol.

2009-12-22  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libgcrypt and GnuPG.  Update
	GpgOL to the latest svn version.

2009-12-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/installer.nsi,
	  doc/logo/gpg4win-nsis-wizard-install-164x314.bmp,
	  doc/logo/gpg4win-nsis-wizard-uninstall-164x314.bmp,
	  doc/logo/gpg4win-nsis-install.ico,
	  doc/logo/gpg4win-nsis-header-install-150x57.bmp,
  	  doc/logo/gpg4win-nsis-uninstall.ico,
	  doc/logo/gpg4win-nsis-header-uninstall-150x57.bmp:
	  Add new bitmaps and icons for nsis installer.

2009-12-15  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update gnupg, kleopatra and kdelibs.

2009-12-08  Colin Leroy  <colin@colino.net>

	* src/inst-claws-mail.nsi, src/uninst-claws-mail.nsi, 
	src/Makefile.am, packages/packages.current: Update Claws Mail
	and its plugins.

2009-10-20  Marcus Brinkmann  <marcus@g10code.com>

	* src/gpg4win.mk.in (SPKG stamps/stamp-$(1)-04-install): Remove
	share/info/dir to avoid stow conflicts.

2009-10-08  Marcus Brinkmann  <marcus@g10code.com>

	* Makefile.am (EXTRA_DIST): Add
	patches/scute-1.3.0/01-wsastartup.patch.

2009-10-05  Marcus Brinkmann  <marcus@g10code.com>

	* src/inst-sections.nsi (calc_defaults_man_advanced_en_done):
	Demagicize a couple of skip_* goto targets for MSI parsing.
	* src/make-msi.pl: Support APPDATA.

2009-09-28  Werner Koch  <wk@g10code.com>

	Release 2.0.1.

	* src/gpg4win.mk.in (README_template): New.
	* src/Makefile.am (README.en.txt, README.de.txt): Remove
	(gpg4win_readme_ll): New.
	(README_files): New.
	(CLEANFILES): Delete all README files.
	(gpg4win-$(VERSION).exe, gpg4win-light-$(VERSION).exe)
	(gpg4win-$(VERSION).wix, gpg4win-light-$(VERSION).wix): Depend on
	all readme files.
